# wuts

./: .gitignore  .prettierignore  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
